AS-615: fix broken styles (#8)
* add proxies to all the govuk-frontend form components

* make it pop

* include table styling in core (auto included) styles

* disable @extend sass lint just for this file

* add mulitple choice checkbox lists

* use list-style-position instead of left margin for li

* fix sass errors

* renamed multiple-choice -> option-select, condensed selectors

--- a/assets/styles/_reset.scss
+++ b/assets/styles/_reset.scss
@@ -82,6 +82,10 @@ ol, ul, nav ol, nav ul {
   list-style: inherit;
 }
 
+ol li, ul li {
+  list-style-position: inside;
+}
+
 fieldset {
   border: 0;
   padding: 0;
